--- a/hl_controller/package.xml
+++ b/hl_controller/package.xml
@@ -55,6 +55,7 @@
   <build_depend>apriltags2_ros</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>hector_uav_msgs</build_depend>
+  <build_depend>tf</build_depend>
 
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
@@ -62,6 +63,7 @@
   <build_export_depend>apriltags2_ros</build_export_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>hector_uav_msgs</build_export_depend>
+  <build_export_depend>tf</build_export_depend>
 
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
@@ -69,6 +71,7 @@
   <exec_depend>apriltags2_ros</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
   <exec_depend>hector_uav_msgs</exec_depend>
+  <exec_depend>tf</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
